--- a/src/style/navbar.scss
+++ b/src/style/navbar.scss
@@ -4,4 +4,15 @@
   background-color: $jet;
   color: $yellow;
   font: $font;
+  width: 100vw;
+  height: 5em;
+  font-size: 1.5em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: bold;
+}
+
+#brand {
+  padding: 10px;
 }
