--- a/src/style/breweries.scss
+++ b/src/style/breweries.scss
@@ -1,6 +1,12 @@
 @import "variables.scss";
 
-#breweries {
+#brewery {
   float: right;
-  margin: 10px;
+  margin: 10px 100px 10px 10px;
+  width: 22em;
+  border-style: solid;
+  border-width: medium;
+  border-color: $yellow;
+  color: $black;
+  padding: 15px;
 }
