--- a/src/style/navbar.scss
+++ b/src/style/navbar.scss
@@ -4,7 +4,7 @@
   background-color: $jet;
   color: $yellow;
   font: $font;
-  width: 100vw;
+  width: 100%;
   height: 5em;
   font-size: 1.5em;
   display: flex;
