--- a/src/style/breweries.scss
+++ b/src/style/breweries.scss
@@ -10,3 +10,13 @@
   color: $black;
   padding: 15px;
 }
+
+#linkBtn {
+  border-style: solid;
+  border-radius: 5px;
+  border-color: $jet;
+  background-color: $yellow;
+  padding: 5px;
+  color: $jet;
+  text-decoration: none;
+}
