responsive styling in process

--- a/src/style/breweries.scss
+++ b/src/style/breweries.scss
@@ -3,12 +3,13 @@
 #brewery {
   float: right;
   margin: 10px 100px 10px 10px;
-  width: 22em;
+  width: 30%;
   border-style: solid;
   border-width: medium;
   border-color: $yellow;
   color: $black;
   padding: 15px;
+  margin: 20px;
 }
 
 #linkBtn {
